src/test/ui/borrowck/borrowck-uninit-ref-chain.ast.stderr
error[E0381]: use of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:11:15
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |               ^^^ use of possibly uninitialized `**x`

error[E0381]: use of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:15:15
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |               ^^^ use of possibly uninitialized `**x`

error[E0381]: use of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:19:15
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |               ^^^ use of possibly uninitialized `**x`

error[E0381]: use of possibly uninitialized variable: `a.x`
  --> $DIR/borrowck-uninit-ref-chain.rs:25:15
   |
LL |     let _b = &a.x; //[ast]~ ERROR use of possibly uninitialized variable: `a.x` [E0381]
   |               ^^^ use of possibly uninitialized `a.x`

error[E0381]: use of possibly uninitialized variable: `**a.x`
  --> $DIR/borrowck-uninit-ref-chain.rs:30:15
   |
LL |     let _b = &**a.x; //[ast]~ ERROR use of possibly uninitialized variable: `**a.x` [E0381]
   |               ^^^^^ use of possibly uninitialized `**a.x`

error[E0381]: use of possibly uninitialized variable: `a.y`
  --> $DIR/borrowck-uninit-ref-chain.rs:36:15
   |
LL |     let _b = &a.y; //[ast]~ ERROR use of possibly uninitialized variable: `a.y` [E0381]
   |               ^^^ use of possibly uninitialized `a.y`

error[E0381]: use of possibly uninitialized variable: `**a.y`
  --> $DIR/borrowck-uninit-ref-chain.rs:41:15
   |
LL |     let _b = &**a.y; //[ast]~ ERROR use of possibly uninitialized variable: `**a.y` [E0381]
   |               ^^^^^ use of possibly uninitialized `**a.y`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0381`.
